@@ -1,5 +1,14 @@
 2014-03-25  Filip Pizlo  <fpizlo@apple.com>
 
+        Fix 32-bit getter call alignment.
+
+        Reviewed by Mark Hahnenberg.
+
+        * jit/Repatch.cpp:
+        (JSC::generateGetByIdStub):
+
+2014-03-25  Filip Pizlo  <fpizlo@apple.com>
+
         Repatch should plant calls to getters directly rather than through a C helper
         https://bugs.webkit.org/show_bug.cgi?id=129589
 
